products/zomlang/tests/language/errors/interface-missing-body-close-brace.zom
// RUN: ! %zomc compile --dump-ast %s 2>&1 | %FileCheck %s

interface I {
  let x: i32;


// CHECK: Error [ZOM2025]: Expected '}'
// CHECK:   --> {{.*interface-missing-body-close-brace.zom}}:14:1
// CHECK:    |
// CHECK: 14 |
// CHECK:    | ^
// CHECK: {{.*zomc}} compile: Compilation failed due to parsing errors.
// CHECK: Try '{{.*zomc}} compile --help' for more information.
